--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node -r dotenv/config index.js",
     "dev": "nodemon -r dotenv/config index.js"
   },
   "keywords": [],
